Frgaal compiler 19.0.0-RC1