@@ -28,8 +28,8 @@ package com.sun.tools.javac.file;
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.lang.module.Configuration;
-import java.lang.module.ModuleFinder;
+//import java.lang.module.Configuration;
+//import java.lang.module.ModuleFinder;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -101,7 +101,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
     public static char[] toArray(CharBuffer buffer) {
         if (buffer.hasArray())
-            return buffer.compact().flip().array();
+            return (char[]) buffer.compact().flip().array();
         else
             return buffer.toString().toCharArray();
     }
@@ -109,7 +109,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     private FSInfo fsInfo;
 
     private static final Set<JavaFileObject.Kind> SOURCE_OR_CLASS =
-        Set.of(JavaFileObject.Kind.SOURCE, JavaFileObject.Kind.CLASS);
+        EnumSet.of(JavaFileObject.Kind.SOURCE, JavaFileObject.Kind.CLASS);
 
     protected boolean symbolFileEnabled;
 
@@ -488,7 +488,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
             java.util.List<Path> files;
             try (Stream<Path> s = Files.list(d)) {
-                files = (sortFiles == null ? s : s.sorted(sortFiles)).toList();
+                files = (sortFiles == null ? s : s.sorted(sortFiles)).collect(Collectors.toList());
             } catch (IOException ignore) {
                 return;
             }
@@ -547,8 +547,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         }
     }
 
-    private static final Set<FileVisitOption> NO_FILE_VISIT_OPTIONS = Set.of();
-    private static final Set<FileVisitOption> FOLLOW_LINKS_OPTIONS = Set.of(FOLLOW_LINKS);
+    private static final Set<FileVisitOption> NO_FILE_VISIT_OPTIONS = Collections.emptySet();
+    private static final Set<FileVisitOption> FOLLOW_LINKS_OPTIONS = Collections.singleton(FOLLOW_LINKS);
 
     private final class ArchiveContainer implements Container {
         private final Path archivePath;
@@ -1141,14 +1141,16 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     public <S> ServiceLoader<S> getServiceLoader(Location location, Class<S> service) throws IOException {
         nullCheck(location);
         nullCheck(service);
-        getClass().getModule().addUses(service);
+//        getClass().getModule().addUses(service); //XXX
         if (location.isModuleOrientedLocation()) {
-            Collection<Path> paths = locations.getLocation(location);
-            ModuleFinder finder = ModuleFinder.of(paths.toArray(new Path[paths.size()]));
-            ModuleLayer bootLayer = ModuleLayer.boot();
-            Configuration cf = bootLayer.configuration().resolveAndBind(ModuleFinder.of(), finder, Collections.emptySet());
-            ModuleLayer layer = bootLayer.defineModulesWithOneLoader(cf, ClassLoader.getSystemClassLoader());
-            return ServiceLoader.load(layer, service);
+//            Collection<Path> paths = locations.getLocation(location);
+//            ModuleFinder finder = ModuleFinder.of(paths.toArray(new Path[paths.size()]));
+//            ModuleLayer bootLayer = ModuleLayer.boot();
+//            Configuration cf = bootLayer.configuration().resolveAndBind(ModuleFinder.of(), finder, Collections.emptySet());
+//            ModuleLayer layer = bootLayer.defineModulesWithOneLoader(cf, ClassLoader.getSystemClassLoader());
+//            return ServiceLoader.load(layer, service);
+            //XXX:
+            return null;
         } else {
             return ServiceLoader.load(service, getClassLoader(location));
         }
