@@ -61,6 +61,8 @@ import static javax.lang.model.element.Modifier.PUBLIC;
 import static javax.lang.model.element.Modifier.STATIC;
 import static javax.lang.model.element.Modifier.STRICTFP;
 import static javax.lang.model.element.Modifier.SYNCHRONIZED;
+import org.frgaal.CollectionShims;
+import org.frgaal.StringShims;
 
 public class Signatures {
 
@@ -105,7 +107,7 @@ public class Signatures {
         private final HtmlConfiguration configuration;
         private Content modifiers;
 
-        private static final Set<String> previewModifiers = Set.of();
+        private static final Set<String> previewModifiers = CollectionShims.set();
 
          TypeSignature(TypeElement typeElement, HtmlDocletWriter writer) {
              this.typeElement = typeElement;
@@ -186,7 +188,7 @@ public class Signatures {
             List<? extends TypeMirror> permits = typeElement.getPermittedSubclasses();
             List<? extends TypeMirror> linkablePermits = permits.stream()
                     .filter(t -> utils.isLinkable(utils.asTypeElement(t)))
-                    .toList();
+                    .collect(Collectors.toList());
             if (!linkablePermits.isEmpty()) {
                 var permitsSpan = HtmlTree.SPAN(HtmlStyle.permits);
                 boolean isFirst = true;
@@ -573,7 +575,7 @@ public class Signatures {
 
             // Exceptions
             if (exceptions != null && !exceptions.isEmpty()) {
-                CharSequence indent = " ".repeat(Math.max(0, indentSize + 1 - 7));
+                CharSequence indent = StringShims.repeat(" ", Math.max(0, indentSize + 1 - 7));
                 target.add(DocletConstants.NL)
                         .add(indent)
                         .add("throws ")
