@@ -52,6 +52,7 @@ import java.util.SortedSet;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import javax.lang.model.AnnotatedConstruct;
 import javax.lang.model.SourceVersion;
@@ -125,6 +126,8 @@ import static javax.lang.model.type.TypeKind.*;
 
 import static com.sun.source.doctree.DocTree.Kind.*;
 import static jdk.javadoc.internal.doclets.toolkit.builders.ConstantsSummaryBuilder.MAX_CONSTANT_VALUE_INDEX_LENGTH;
+import org.frgaal.CollectionShims;
+import org.frgaal.StringShims;
 
 /**
  * Utilities Class for Doclets.
@@ -605,7 +608,7 @@ public class Utils {
         if (!bounds.isEmpty()) {
             TypeMirror upperBound = bounds.get(bounds.size() - 1);
             if (ignoreBounds(upperBound)) {
-                return List.of();
+                return CollectionShims.list();
             }
         }
         return bounds;
@@ -726,7 +729,7 @@ public class Utils {
     }
 
     public TypeMirror getDeclaredType(TypeElement enclosing, TypeMirror target) {
-        return getDeclaredType(List.of(), enclosing, target);
+        return getDeclaredType(CollectionShims.list(), enclosing, target);
     }
 
     /**
@@ -1227,7 +1230,7 @@ public class Utils {
             return text;
 
         final int tabLength = options.sourceTabSize();
-        final String whitespace = " ".repeat(tabLength);
+        final String whitespace = StringShims.repeat(" ", tabLength);
         final int textLength = text.length();
         StringBuilder result = new StringBuilder(textLength);
         int pos = 0;
@@ -1907,7 +1910,7 @@ public class Utils {
         return e.getEnclosedElements().stream()
                 .filter(e_ -> select.test(e_) && (all || shouldDocument(e_)))
                 .map(clazz::cast)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private SimpleElementVisitor14<Boolean, Void> shouldDocumentVisitor = null;
@@ -2220,14 +2223,14 @@ public class Utils {
     }
 
     public List<? extends DocTree> getBlockTags(DocCommentTree dcTree) {
-        return dcTree == null ? List.of() : dcTree.getBlockTags();
+        return dcTree == null ? CollectionShims.list() : dcTree.getBlockTags();
     }
 
     public List<? extends DocTree> getBlockTags(Element element, Predicate<DocTree> filter) {
         return getBlockTags(element).stream()
                 .filter(t -> t.getKind() != ERRONEOUS)
                 .filter(filter)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public <T extends DocTree> List<T> getBlockTags(Element element, Predicate<DocTree> filter, Class<T> tClass) {
@@ -2235,7 +2238,7 @@ public class Utils {
                 .filter(t -> t.getKind() != ERRONEOUS)
                 .filter(filter)
                 .map(tClass::cast)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<? extends DocTree> getBlockTags(Element element, DocTree.Kind kind) {
@@ -2439,21 +2442,21 @@ public class Utils {
     public List<? extends DocTree> getPreamble(Element element) {
         DocCommentTree docCommentTree = getDocCommentTree(element);
         return docCommentTree == null
-                ? List.of()
+                ? CollectionShims.list()
                 : docCommentTree.getPreamble();
     }
 
     public List<? extends DocTree> getFullBody(Element element) {
         DocCommentTree docCommentTree = getDocCommentTree(element);
             return (docCommentTree == null)
-                    ? List.of()
+                    ? CollectionShims.list()
                     : docCommentTree.getFullBody();
     }
 
     public List<? extends DocTree> getBody(Element element) {
         DocCommentTree docCommentTree = getDocCommentTree(element);
         return (docCommentTree == null)
-                ? List.of()
+                ? CollectionShims.list()
                 : docCommentTree.getFullBody();
     }
 
@@ -2508,7 +2511,7 @@ public class Utils {
     public List<? extends DocTree> getFirstSentenceTrees(Element element) {
         DocCommentTree dcTree = getDocCommentTree(element);
         if (dcTree == null) {
-            return List.of();
+            return CollectionShims.list();
         }
         return new ArrayList<>(dcTree.getFirstSentence());
     }
@@ -2597,7 +2600,7 @@ public class Utils {
     }
 
     public enum DeclarationPreviewLanguageFeatures {
-        NONE(List.of(""));
+        NONE(CollectionShims.list(""));
         public final List<String> features;
 
         DeclarationPreviewLanguageFeatures(List<String> features) {
@@ -2608,7 +2611,7 @@ public class Utils {
     public PreviewSummary declaredUsingPreviewAPIs(Element el) {
         if (el.asType().getKind() == ERROR) {
             // Can happen with undocumented --ignore-source-errors option
-            return new PreviewSummary(Set.of(), Set.of(), Set.of());
+            return new PreviewSummary(CollectionShims.set(), CollectionShims.set(), CollectionShims.set());
         }
         List<TypeElement> usedInDeclaration = new ArrayList<>(annotations2Classes(el));
         switch (el.getKind()) {
@@ -2617,25 +2620,25 @@ public class Utils {
                 for (TypeParameterElement tpe : te.getTypeParameters()) {
                     usedInDeclaration.addAll(types2Classes(tpe.getBounds()));
                 }
-                usedInDeclaration.addAll(types2Classes(List.of(te.getSuperclass())));
+                usedInDeclaration.addAll(types2Classes(CollectionShims.list(te.getSuperclass())));
                 usedInDeclaration.addAll(types2Classes(te.getInterfaces()));
                 usedInDeclaration.addAll(types2Classes(te.getPermittedSubclasses()));
-                usedInDeclaration.addAll(types2Classes(te.getRecordComponents().stream().map(Element::asType).toList())); //TODO: annotations on record components???
+                usedInDeclaration.addAll(types2Classes(te.getRecordComponents().stream().map(Element::asType).collect(Collectors.toList()))); //TODO: annotations on record components???
             }
             case CONSTRUCTOR, METHOD -> {
                 ExecutableElement ee = (ExecutableElement) el;
                 for (TypeParameterElement tpe : ee.getTypeParameters()) {
                     usedInDeclaration.addAll(types2Classes(tpe.getBounds()));
                 }
-                usedInDeclaration.addAll(types2Classes(List.of(ee.getReturnType())));
-                usedInDeclaration.addAll(types2Classes(List.of(ee.getReceiverType())));
+                usedInDeclaration.addAll(types2Classes(CollectionShims.list(ee.getReturnType())));
+                usedInDeclaration.addAll(types2Classes(CollectionShims.list(ee.getReceiverType())));
                 usedInDeclaration.addAll(types2Classes(ee.getThrownTypes()));
-                usedInDeclaration.addAll(types2Classes(ee.getParameters().stream().map(VariableElement::asType).toList()));
+                usedInDeclaration.addAll(types2Classes(ee.getParameters().stream().map(VariableElement::asType).collect(Collectors.toList())));
                 usedInDeclaration.addAll(annotationValue2Classes(ee.getDefaultValue()));
             }
             case FIELD, ENUM_CONSTANT, RECORD_COMPONENT -> {
                 VariableElement ve = (VariableElement) el;
-                usedInDeclaration.addAll(types2Classes(List.of(ve.asType())));
+                usedInDeclaration.addAll(types2Classes(CollectionShims.list(ve.asType())));
             }
             case MODULE, PACKAGE -> {
             }
@@ -2697,7 +2700,7 @@ public class Utils {
     private Collection<TypeElement> annotation2Classes(AnnotationMirror am) {
         List<TypeElement> result = new ArrayList<>();
 
-        result.addAll(types2Classes(List.of(am.getAnnotationType())));
+        result.addAll(types2Classes(CollectionShims.list(am.getAnnotationType())));
         am.getElementValues()
           .values()
           .stream()
@@ -2709,7 +2712,7 @@ public class Utils {
 
     private Collection<TypeElement> annotationValue2Classes(AnnotationValue value) {
         if (value == null) {
-            return List.of();
+            return CollectionShims.list();
         }
 
         List<TypeElement> result = new ArrayList<>();
@@ -2729,7 +2732,7 @@ public class Utils {
 
             @Override
             public Object visitType(TypeMirror t, Object p) {
-                result.addAll(types2Classes(List.of(t)));
+                result.addAll(types2Classes(CollectionShims.list(t)));
                 return super.visitType(t, p);
             }
 
